clusters/lgsk8sp1/deploy/wordpress/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: wordpress
spec:
  hosts:
  - "www.diegoluisi.eti.br"
  gateways:
  - wordpress
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: wordpress
